--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,13 +7,13 @@
   "background_color": "#fff",
   "theme_color": "#673ab8",
   "icons": [{
-    "src": "./assets/icons/android-chrome-192x192.png",
+    "src": "./assets/icons/favicon-32x32",
     "type": "image/png",
-    "sizes": "192x192"
+    "sizes": "32x32"
   },
   {
-    "src": "./assets/icons/android-chrome-512x512.png",
+    "src": "./assets/icons/favicon-32x32",
     "type": "image/png",
-    "sizes": "512x512"
+    "sizes": "32x32"
   }]
 }
